import "base.proto";
import "facttypes_base.proto";


message DateFact_TOMITA: NFactType.TFact 
{
    required string Date_TOMITA = 1;
}

message PersonFact_TOMITA: NFactType.TFact 
{
    required string Person_TOMITA = 1;
}

message LocationFact_TOMITA: NFactType.TFact 
{
    required string Loc_TOMITA = 1;
}